credential api docs added
